deploy/kubernetes/50-traefik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: primeiro-prontuario
spec:
  redirectScheme:
    scheme: https
    permanent: true
